index.css
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Inter&display=swap');
:root{
    --bg: #0a0a0f;
    --plats: #13131a;
    --main: #7c3aed;
    --mainup: #bb7ff3;
    --text: #e2e8f0;
    --muted: #6b7280;

    --light_bg: #f5f3ff;
    --light_plats: #aaa;
    --light_main: #381476;
    --light_mainup: #4b1a9b;
    --light_text: #1a1523;
    --light_muted: #6b7280;
}
* {
    scrollbar-width: none;
    /* Firefox */
    -ms-overflow-style: none;
    /* IE 10+ */
}

*::-webkit-scrollbar {
    display: none;
    /* Chrome, Safari, Edge */
}
@keyframes fadeUp {
    from {
        opacity: 0;
        transform: translateY(20px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translateY(20px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    padding-top: 0px;
}
.navig{
    width: 100%;
    z-index: 999;
    padding-top: 10px;
    display: flex;
    justify-content: center;
    background-color: #0a0a0f;
    backdrop-filter: blur(10px);
    opacity: 0;
    animation: fadeIn 0.5s ease forwards;
    animation-delay: 0.5s;
}

.title-bar{
    display: flex;
    gap: 40px;
    flex-direction: row;
    border-style: solid;
    border-width: 1px;
    border-radius: 50px;
    border-color: var(--main);
    padding-left: 50px;
    padding-right: 50px;
    background-color: #0a0a0f09;
    backdrop-filter: blur(10px);
    font-family: 'Space Grotesk', sans-serif;
    opacity: 0;
    animation: fadeIn 0.5s ease forwards;
    animation-delay: 0.5s;
}
.title-bar:hover{
    border-color: var(--mainup);
    transition-duration: 0.8s;
}
.elements{
    margin: 10px;
    color: var(--main);
    cursor: pointer;
    font-family: 'Space Grotesk', sans-serif;
    background-color: #0a0a0f;
    backdrop-filter: blur(10px);
}
.elements:hover{
    color: var(--mainup);
    transition-duration: 1s;
}
.primary, .techside{
    padding-left: 30px;
    opacity: 0;
    animation: fadeIn 0.5s ease forwards;
    animation-delay: 0.5s;
}
.primary{
    background-color: #0a0a0f;
    padding-top: 20px;
    padding-bottom: 20px;
    height: calc(100vh - 50px);
}
.techside{
    margin-top: 15px;
    height: 400px;
}
.sect-title, .sect-title-light{
    font-family: 'Space Grotesk', sans-serif;
    font-size: 30px;
}
.sect-title{
    color: var(--main);
}
.sect-title-light{
    color: var(--light_main);
}
.my-intro{
    color: var(--text);
}
.cards-container {
    scrollbar-width: none;
    margin-top: 15px;
    margin-left: 15px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    overflow-x: auto;
    justify-content: left;
    gap: 15px;
    opacity: 0;
    animation: fadeIn 0.5s ease forwards;
    animation-delay: 1.5s;
    padding-right: 20px;
}
.card {
    flex-shrink: 0;
    scroll-snap-align: start;
    width: 420px;
    height: 300px;
    perspective: 1000px;
    /* 3D perspective */
    margin: 10px;
    transition: all 0.5s ease;
}
.card-toggle { display: none; }
.flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: all 0.5s ease;
    transform-style: preserve-3d;
}

@media (hover: hover) and (pointer: fine) {
  .card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }
}
@media (hover: none) and (pointer: coarse) {
  .card-toggle:checked + .card .flip-card-inner {
    transform: rotateY(180deg);
  }
}
.flip-card-front,
.flip-card-back {
    position: absolute;
    /* stack front/back */
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 25px;
    font-family: sans-serif;
    color: white;
    box-sizing: border-box;
    border-style: solid;
    border-color: var(--main);
    border-width: 1px;
    font-family: 'Space Grotesk', sans-serif;
}

.flip-card-front {
    font-weight: bolder;
    font-size: 25px;
    padding-left: 15px;
    padding-right: 15px;
    word-wrap: break-word;
    /* wrap long words */
    white-space: normal;
    /* allow line breaks */
    overflow-wrap: anywhere;
    /* handles really long unbroken text */
    text-align: center;
}

.flip-card-back {
    border-color: var(--mainup);
    border-style: solid;
    border-width: 1px;
    overflow-y: auto;
    transform: rotateY(180deg);
}
.techskillcontainer {
    border-radius: 25px;
    padding-right: 20px;
    padding-left: 20px;
    padding-bottom: 30px;
    margin-top: 20px;
    display: flex;
    align-items: flex-start;
    background: linear-gradient(135deg, #7c3aed60, #bb7ff360);
    height: 300px;
    gap: 15px;
    align-items: center;
    width: fit-content;
    opacity: 0;
    animation: fadeIn 0.5s ease forwards;
    animation-delay: 1.0s;
}
.card-pair {
    position: relative;
    width: fit-content;
    height: fit-content;

}
.main-card{
    display: flex;
    flex-direction: row;
    background-color: #fff;
    border-radius: 15px;
    padding-left: 20px;
    padding-right: 20px;
    transition-duration: 0.5s;
    position: relative;
    width: 220px;   
    height: 50px;
    box-sizing: border-box;
    box-shadow: 0px 5px 5px 3px #0a0a0f;
    z-index: 100;
    opacity: 0;
    animation: fadeIn 0.5s ease forwards;
    animation-delay: 1.5s;
}
.skill-name{
    /* border-style: solid;
    border-color: red;
    border-width: 1px; */
    font-family:'Space Grotesk',sans-serif;
    align-content: center;
    margin-left: 10px;
    font-size: 18px;
    transition-duration: 0.5s;
}
.sub-card{
    height:0;
    width: 220px;
    pointer-events: none;
    top: 25px;
    overflow: hidden;
    visibility: hidden;
    /* border-style: solid;
    border-color: red;
    border-width: 1px; */
    transition: height 0.5s ease, visibility 0s ease 0.5s;
    transform: translateY(-45%);
    box-shadow: 0px 5px 5px 3px #0a0a0f;
    backdrop-filter: blur(10px) saturate(180%);
    position: absolute;
    background-color: #ffffff99;
    border-radius: 15px;
}
.main-card:hover {
    background-color: #0a0a0f;
    box-shadow: 0px 0px 5px 1px #0a0a0f;
}
.main-card:hover .skill-name{
    color: white;
}
.main-card:hover ~ .sub-card{
    height: 270px;
    visibility: visible;
    transition: height 0.5s ease, visibility 0s ease 0s;
}
.experience, .ican, .ican-swift, .ican-c{
    padding-left: 5px;
    padding-top: 10px;
    font-family: 'Space Grotesk', sans-serif;
    font-size: 18px;
}
.ican{
    margin-top: 50px;
}
.ican-swift{
    margin-top: 50px;
}
.ican-c{
    margin-top: 65px;
}

.design{
    background-color: #0a0a0f;
    padding-left: 30px;
    padding-top: 30px;
    height: 100vh;
}
@media (max-width: 500px) {

    /* CSS here only applies on devices with width <= 768px */
    .cards-container {
        flex-wrap: wrap;
        /* stack cards */
        justify-content: center;
    }

    .card {
        width: 90%;
        /* make cards fit screen */
        max-width: 420px;
        /* keep desktop max */
        margin: 10px auto;
    }
    .primary{
        width: 100%;
        height: 100%;
    }
    .techskillcontainer {
        flex-direction: column;
        align-items: center;
        height: auto;
    }
    .card-pair {
        width: 90%;
        margin-bottom: 15px;
    }
    .main-card,.sub-card {
        width: 100%;
        position: relative;
        top: auto;
        transform: none;
        overflow: visible;
        visibility: visible;
    }
        .sect-title {
            font-size: 24px;
        }
    
        .flip-card-front {
            font-size: 20px;
            padding: 10px;
        }
    
        .flip-card-back {
            font-size: 16px;
            padding: 10px;
        }
    
        .skill-name {
            font-size: 16px;
        }
    
        .title-bar {
            flex-direction: column;
            gap: 10px;
            padding: 15px;
        }
}

